Random styling improvements

--- a/templates/drivers/index.html
+++ b/templates/drivers/index.html
@@ -34,7 +34,7 @@
     {% endfor %}
 </table>
 
-<form action = "/drivers/new" method="get">
+<form action = "/drivers/new" method="get" class="add_button_form">
     <button class = "button red" type = "submit">Add Driver</button> 
 </form>
 
