--- a/templates/grand_prix/index.html
+++ b/templates/grand_prix/index.html
@@ -34,7 +34,7 @@
     {% endfor %}
 </table>
 
-<form action = "/grand_prix/new" method="get">
+<form action = "/grand_prix/new" method="get" class="add_button_form">
     <button class = "button red" type = "submit">Add Grand Prix</button> 
 </form>
 
