--- a/templates/race_results/index.html
+++ b/templates/race_results/index.html
@@ -5,7 +5,7 @@
 <h1>Race Result</h1>
 <table>
     <tr>
-        <th>Grand Prix Round</th>
+        <th>GP Round</th>
         <th>Grand Prix Name</th>
         <th>Racing Number</th>
         <th>Driver Name</th>
@@ -42,7 +42,7 @@
     {% endfor %}
 </table>
 
-<form action = "/race_results/new" method="get">
+<form action = "/race_results/new" method="get" class="add_button_form">
     <button class = "button red" type = "submit">Add Race Result</button> 
 </form>
 
