--- a/templates/race_results/new.html
+++ b/templates/race_results/new.html
@@ -2,58 +2,60 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Add a Race Result</h1>
+<div class="form_container">
+    <h1>Add a Race Result</h1>
 
 
-<form action = "/race_results" method="post">
-    <div>
-        <label for = "driver">Driver</label>
-        <select id = "driver" name = "driver" placeholder = "Driver" >
-        {% for driver in drivers %}
-        <option value = "{{ driver.racing_number}}">{{ driver.name }}</option>
-        {% endfor %}
-        </select>
-    </div>
-    <div>
-        <label for = "grand_prix">Grand Prix</label>
-        <select id = "grand_prix" name = "grand_prix" placeholder = "Grand Prix" >
-        {% for grand_prix in grands_prix %}
-        <option value = "{{ grand_prix.round }}">{{ grand_prix.name }}</option>
-        {% endfor %}
-        </select>
-    </div>
-    <div>
-        <label for = "position">Position</label>
-        <select id = "position" name = "position" placeholder = "Position" >
-            <option value = ""></option>
-            {% for number in range(1, 21) %}
-            <option value = "{{ number }}">{{ number }}</option>
+    <form action = "/race_results" method="post" class="input_form">
+        <div class="form_field">
+            <label for = "driver">Driver</label>
+            <select id = "driver" name = "driver" placeholder = "Driver" >
+            {% for driver in drivers %}
+            <option value = "{{ driver.racing_number}}">{{ driver.name }}</option>
             {% endfor %}
-        </select>
-    </div>
-    <div>
-        <label for = "fastest_lap">Fastest Lap</label>
-        <input type = "checkbox" id = "fastest_lap" name = "fastest_lap">
-    </div>
-    <div>
-        <label for = "status">Status</label>
-        <select id = "status" name = "status">
-            <option value = ""></option>
-            <option value = "DNS">DNS</option>
-            <option value = "Ret">Ret</option>
-            <option value = "DSQ">DSQ</option>
-            <option value = "WD">WD</option>
-        </select>
-    </div>
-    <div>
-        <label for = "sprint_position">Sprint Position</label>
-        <select id = "sprint_position" name = "sprint_position">
-            <option value = ""></option>
-            {% for number in range(1, 4) %}
-            <option value = "{{ number }}">{{ number }}</option>
+            </select>
+        </div>
+        <div class="form_field">
+            <label for = "grand_prix">Grand Prix</label>
+            <select id = "grand_prix" name = "grand_prix" placeholder = "Grand Prix" >
+            {% for grand_prix in grands_prix %}
+            <option value = "{{ grand_prix.round }}">{{ grand_prix.name }}</option>
             {% endfor %}
-        </select>
-    </div>
-    <button class = "button red" type = "submit">Add Race Result</button>
-</form>
+            </select>
+        </div>
+        <div class="form_field">
+            <label for = "position">Position</label>
+            <select id = "position" name = "position" placeholder = "Position" >
+                <option value = ""></option>
+                {% for number in range(1, 21) %}
+                <option value = "{{ number }}">{{ number }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form_field">
+            <label for = "fastest_lap">Fastest Lap</label>
+            <input type = "checkbox" id = "fastest_lap" name = "fastest_lap">
+        </div>
+        <div class="form_field">
+            <label for = "status">Status</label>
+            <select id = "status" name = "status">
+                <option value = ""></option>
+                <option value = "DNS">DNS</option>
+                <option value = "Ret">Ret</option>
+                <option value = "DSQ">DSQ</option>
+                <option value = "WD">WD</option>
+            </select>
+        </div>
+        <div class="form_field">
+            <label for = "sprint_position">Sprint Position</label>
+            <select id = "sprint_position" name = "sprint_position">
+                <option value = ""></option>
+                {% for number in range(1, 4) %}
+                <option value = "{{ number }}">{{ number }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <button class = "button red" type = "submit">Add Race Result</button>
+    </form>
+</div>
 {% endblock %}
