--- a/templates/teams/index.html
+++ b/templates/teams/index.html
@@ -38,7 +38,7 @@
     {% endfor %}
 </table>
 
-<form action = "/teams/new" method="get">
+<form action = "/teams/new" method="get" class="add_button_form">
     <button class = "button red" type = "submit">Add Team</button> 
 </form>
 
