--- a/static/style.css
+++ b/static/style.css
@@ -46,6 +46,8 @@ body {
 
 #content {
     display: flex;
+    flex: 1;
+    align-items: stretch;
     flex-direction: column;
     align-self: center;
     max-width: 1440px;
@@ -57,16 +59,25 @@ body {
 table {
     border: none;
     border-spacing: 0;
+    max-width: 1440px;
+    overflow-x: scroll;
 }
 
 th {
     color: gray;
+    font-weight: 200;
     text-transform: uppercase;
     font-size: 11px;
+    text-align: left;
+    padding: 20px 0;
+}
+
+tr > td:nth-child(1) {
+    padding-left: 10px;
 }
 
 td {
-    padding: 20px;
+    padding: 20px 0;
     font-size: 13px;
     border: none;
 }
@@ -90,4 +101,48 @@ tr:nth-child(even) {
 
 .black {
     background-color: #000000
+}
+
+.form_field {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+}
+
+input, select {
+    padding: 15px;
+    border-radius: 5px;
+    outline: none;
+    box-shadow: none;
+    border: 1px solid #000000;
+}
+
+#fastest_lap {
+    transform: scale(1.5);
+}
+
+label {
+    font-size: 14px;
+}
+
+.input_form {
+    width: 500px;
+}
+
+.form_container {
+    align-self: center;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    border-top: 5px solid #000000;
+    border-right: 5px solid #000000;
+    border-top-right-radius: 20px;
+}
+
+.add_button_form {
+    margin-top: 20px;
 }
