--- a/templates/drivers/edit.html
+++ b/templates/drivers/edit.html
@@ -1,35 +1,37 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="form_container">
+    <h1>Edit Driver</h1>
 
-<form action = "/drivers/{{ driver.racing_number }}" method="post">
-    <div>
-        <label for = "racing_number">Driver Racing umber</label>
-        <input type = "text" id = "racing_number" name = "racing_number" value = "{{ driver.racing_number }}" required>
-    </div>
+    <form action = "/drivers/{{ driver.racing_number }}" method="post" class="input_form">
+        <div class="form_field">
+            <label for = "racing_number">Driver Racing umber</label>
+            <input type = "text" id = "racing_number" name = "racing_number" value = "{{ driver.racing_number }}" required>
+        </div>
 
-    <div>
-        <label for = "driver_name">Driver Name</label>
-        <input type = "text" id = "driver_name" name = "driver_name" value = "{{ driver.name }}" required>
-    </div>
-    <div>
-        <label for = "driver_nationality">Date</label>
-        <input type = "text" id = "driver_nationality" name = "driver_nationality" value = "{{ driver.nationality }}" required>
-    </div>
-    <div>
-        <label for = "team">Team</label>
-        <select id = "team" name = "team" placeholder = "Team" >
-        {% for team in teams %}
-        <option value = "{{ team.id }}">{{ team.constructor }}</option>
-        {% endfor %}
-        </select>
-    </div>
+        <div class="form_field">
+            <label for = "driver_name">Driver Name</label>
+            <input type = "text" id = "driver_name" name = "driver_name" value = "{{ driver.name }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "driver_nationality">Date</label>
+            <input type = "text" id = "driver_nationality" name = "driver_nationality" value = "{{ driver.nationality }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "team">Team</label>
+            <select id = "team" name = "team" placeholder = "Team" >
+            {% for team in teams %}
+            <option value = "{{ team.id }}">{{ team.constructor }}</option>
+            {% endfor %}
+            </select>
+        </div>
 
 
 
-    <button class = "button black" type = "submit">Update Driver</button>
+        <button class = "button black" type = "submit">Update Driver</button>
 
-</form>
-
+    </form>
+</div>
 
 {% endblock %}
