--- a/templates/grand_prix/edit.html
+++ b/templates/grand_prix/edit.html
@@ -1,25 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="form_container">
+    <h1>Edit Grand Prix</h1>
 
-<form action = "/grand_prix/{{grand_prix.round}}" method="post">
-    <div>
-        <label for = "name">Grand Prix Name</label>
-        <input type = "text" id = "name" name = "name" value = "{{ grand_prix.name }}" required>
-    </div>
+    <form action = "/grand_prix/{{grand_prix.round}}" method="post" class="input_form">
+        <div class="form_field">
+            <label for = "name">Grand Prix Name</label>
+            <input type = "text" id = "name" name = "name" value = "{{ grand_prix.name }}" required>
+        </div>
 
-    <div>
-        <label for = "circuit">Grand Prix Circuit</label>
-        <input type = "text" id = "circuit" name = "circuit" value = "{{ grand_prix.circuit }}" required>
-    </div>
-    <div>
-        <label for = "date">Date</label>
-        <input type = "text" id = "date" name = "date" value = "{{ grand_prix.date }}" required>
-    </div>
+        <div class="form_field">
+            <label for = "circuit">Grand Prix Circuit</label>
+            <input type = "text" id = "circuit" name = "circuit" value = "{{ grand_prix.circuit }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "date">Date</label>
+            <input type = "text" id = "date" name = "date" value = "{{ grand_prix.date }}" required>
+        </div>
 
-    <button class = "button black" type = "submit">Update Grand Prix</button>
+        <button class = "button black" type = "submit">Update Grand Prix</button>
 
-</form>
+    </form>
+</div>
 
 
 {% endblock %}
