--- a/templates/teams/edit.html
+++ b/templates/teams/edit.html
@@ -1,33 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="form_container">
+    <h1>Edit Team</h1>
+    
+    <form action = "/teams/{{ team.id }}" method="post" class="input_form">
 
-<form action = "/teams/{{ team.id }}" method="post">
+        <div class="form_field">
+            <label for = "constructor">Grand Prix Constructor</label>
+            <input type = "text" id = "constructor" name = "constructor" value = "{{ team.constructor }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "engine_supplier">Engine Supplier</label>
+            <input type = "text" id = "engine_supplier" name = "engine_supplier" value = "{{ team.engine_supplier }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "Chassis">Chassis</label>
+            <input type = "text" id = "chassis" name = "chassis" value = "{{ team.chassis }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "engine_model">Engine Model</label>
+            <input type = "text" id = "engine_model" name = "engine_model" value = "{{ team.engine_model }}" required>
+        </div>
+        <div class="form_field">
+            <label for = "nationality">Nationality</label>
+            <input type = "text" id = "nationality" name = "nationality" value = "{{ team.nationality }}" required>
+        </div>
 
-    <div>
-        <label for = "constructor">Grand Prix Constructor</label>
-        <input type = "text" id = "constructor" name = "constructor" value = "{{ team.constructor }}" required>
-    </div>
-    <div>
-        <label for = "engine_supplier">Engine Supplier</label>
-        <input type = "text" id = "engine_supplier" name = "engine_supplier" value = "{{ team.engine_supplier }}" required>
-    </div>
-    <div>
-        <label for = "Chassis">Chassis</label>
-        <input type = "text" id = "chassis" name = "chassis" value = "{{ team.chassis }}" required>
-    </div>
-    <div>
-        <label for = "engine_model">Engine Model</label>
-        <input type = "text" id = "engine_model" name = "engine_model" value = "{{ team.engine_model }}" required>
-    </div>
-    <div>
-        <label for = "nationality">Nationality</label>
-        <input type = "text" id = "nationality" name = "nationality" value = "{{ team.nationality }}" required>
-    </div>
+        <button class = "button black" type = "submit">Update Team</button>
 
-    <button class = "button black" type = "submit">Update Team</button>
-
-</form>
-
+    </form>
+</div>
 
 {% endblock %}
