--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,8 @@
 {% block content %}
 <h1>Formula One</h1>
 
-<p>We race as One</p>
+<h2>We Race as One</h2>
+
+<img id ="f1_image" src="static/f1_race.jpeg">
+
 {% endblock %}
