--- a/static/style.css
+++ b/static/style.css
@@ -22,6 +22,9 @@ body {
     color: white;
     font-weight: bold;
     text-decoration: none;
+    display: inline-block;
+    padding: 26px 20px;
+    letter-spacing: .5px;
 }
 
 #navbar > ul {
@@ -33,11 +36,6 @@ body {
 
 #navbar > ul > li > a:visited {
     color: white;
-}
-
-#navbar > ul >li {
-    margin: 0 20px;
-    padding: 26px 10px;
 }
 
 #navbar > ul > li:hover {
@@ -136,6 +134,7 @@ label {
 h1 {
     font-size: 36px;
     font-weight: bold;
+    letter-spacing: 2px;
     margin-top: 20px;
     margin-bottom: 40px;
     border-top: 5px solid #000000;
@@ -145,4 +144,18 @@ h1 {
 
 .add_button_form {
     margin-top: 20px;
+}
+
+#f1_image{
+    width: 100%;
+}
+
+h2{
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-right: 20px;
+    align-self: flex-end;
 }
