--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
             <nav id = "navbar">
                 <ul>
                     <li>
+                        <a href = "/">Home</a>
+                    </li>
+                    <li>
                         <a href = "/drivers">Drivers</a>
                     </li>
                     <li>
