--- a/templates/drivers/edit.html
+++ b/templates/drivers/edit.html
@@ -6,8 +6,8 @@
 
     <form action = "/drivers/{{ driver.racing_number }}" method="post" class="input_form">
         <div class="form_field">
-            <label for = "racing_number">Driver Racing umber</label>
-            <input type = "text" id = "racing_number" name = "racing_number" value = "{{ driver.racing_number }}" required>
+            <label for = "racing_number">Driver Racing Number</label>
+            <input type = "text" id = "racing_number" name = "racing_number" value = "{{ driver.racing_number }}" disabled>
         </div>
 
         <div class="form_field">
